--- a/server/src/views/reject.ejs
+++ b/server/src/views/reject.ejs
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title><%= subject %></title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -80,7 +81,7 @@
                   <img
                     width="150"
                     height="150"
-                    src="https://res.cloudinary.com/dgbu6rwwq/image/upload/v1719117175/images/kktiezze1jc4sq6pgvqv.png"
+                    src="https://res.cloudinary.com/dgbu6rwwq/image/upload/v1728498819/images/isxxgnl34d50kmvz8ocx.png"
                     alt="hero image"
                   />
                 </td>
@@ -90,15 +91,11 @@
                   align="center"
                   style="font-weight: 500; font-size: 20px; padding-top: 32px"
                 >
-                  Welcome to
-                  <span
-                    style="
-                      color: #248fef;
-                      font-family: Bitter, serif;
-                      font-weight: 700;
-                    "
-                    ><%= bank_name %></span
-                  >,
+                  <p
+                    style="max-width: 440px; margin: 8px auto 0; color: #dc3545"
+                  >
+                    <%= title %>.
+                  </p>
                 </td>
               </tr>
               <tr>
@@ -119,53 +116,13 @@
                     "
                   >
                     <tr>
-                      <td style="padding-bottom: 16px">Dear <%= name %>,</td>
+                      <td style="padding-bottom: 16px">Dear <%= name =%>,</td>
                     </tr>
                     <tr>
                       <td style="font-size: 14px">
                         <p style="max-width: 440px; margin: 0 auto 16px">
-                          We are thrilled to welcome you to our family! At <%=
-                          bank_name %>, we are dedicated to delivering
-                          exceptional service and providing secure, convenient
-                          banking solutions designed to meet your needs. We
-                          value building long-term relationships with our
-                          customers and are excited to be part of your journey
-                          toward achieving your goals.
+                          <%= message %>
                         </p>
-                        <p style="max-width: 440px; margin: 0 auto">
-                          By choosing to work with us, you've partnered with a
-                          dedicated team focused on helping you reach your
-                          individual and business goals. Your trust means
-                          everything to us, and we look forward to supporting
-                          you every step of the way.
-                        </p>
-                      </td>
-                    </tr>
-
-                    <tr>
-                      <td
-                        align="center"
-                        style="padding-top: 40px; padding-bottom: 20px"
-                      >
-                        <a
-                          href="<%= login_link %>"
-                          target="_blank"
-                          style="
-                            display: block;
-                            width: 150px;
-                            object-fit: contain;
-                            background-color: #248fef;
-                            text-decoration: none;
-                            color: #fff;
-                            font-size: 14px;
-                            font-weight: 500;
-                            border-radius: 4px;
-                            padding: 14px 0;
-                            height: fit-content;
-                          "
-                        >
-                          Proceed
-                        </a>
                       </td>
                     </tr>
                   </table>
